Fixed the signup button and tried changes for hiding scrollbar on mobile app

--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -19,6 +19,12 @@
   gap: 150px;
 }
 
+.navbar-right {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 150px;
+}
+
 .logo {
   color: $white;
   font-size: 24px;
