--- a/src/sass/basic.scss
+++ b/src/sass/basic.scss
@@ -2,3 +2,9 @@ body {
   margin: 0;
   padding: 0;
 }
+
+@media screen and (max-width: 768px){
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+  }
+}
